# hsds-upcxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakefile.external
data/sample2/: part_00  part_01  part_02  part_03  part_04  part_05  part_06  part_07  part_08  part_09
extlib/mrmpi-7Apr14/examples/: Makefile.linux  crmat.c  cwordfreq.c  rmat.cpp  wordfreq.cpp
extlib/mrmpi-7Apr14/src/: Makefile  cmapreduce.h  error.cpp  error.h  irregular.h  keymultivalue.cpp  keymultivalue.h  keyvalue.cpp  keyvalue.h  mapreduce.cpp  mapreduce.h  memory.cpp  memory.h  mrtype.h
misc/: .test_krm.sh.swp  compare_krm_out.py  fastq2seq.py  test_edges.sh  test_kmer_counting.sh  test_krm.sh  test_lpav1.sh  test_merge_edge.sh  test_merge_kc.sh  test_merge_krm.sh
misc/example/mimir_lawrencium/: README.md  run_eg.slurm  run_kc.slurm  run_krm.slurm  run_lpav1.slurm
misc/example/mpi_lawrencium/: run_eg.slurm  run_kc.slurm  run_krm.slurm  run_lpa.slurm
misc/example/mrmpi_lawrencium/: README.md  run_eg.slurm  run_kc.slurm  run_krm.slurm
misc/example/upcxx_lawrencium/: run_edges.slurm  run_kc.slurm  run_krm.slurm  run_lpav1.slurm
misc/lawrencium/: run_lshvec.py  run_lshvec.sh  run_lshvec_ill.py  run_lshvec_ill.sh  run_lshvec_ill_mushroomspring.sh
patch/: leveldb.patch  zmqpp.patch
src/: config.h  distr_kgraph_graph.h  distr_lpa_graph.h  distrmap.h  edge_generating_mimir.cpp  edge_generating_mpi.cpp  edge_generating_mrmpi.cpp  edge_generating_upc.cpp  edge_generating_upcxx.cpp  kmer.cpp  kmer.h  kmer_counting.cpp  kmer_counting_bcl.cpp  kmer_counting_mimir.cpp  kmer_counting_mpi.cpp  kmer_counting_mrmpi.cpp  kmer_counting_upc.cpp  kmer_counting_upcxx.cpp  kmer_read_mapping.cpp  kmer_read_mapping_mimir.cpp  kmer_read_mapping_mpi.cpp  kmer_read_mapping_mrmpi.cpp  kmer_read_mapping_upc.cpp  kmer_read_mapping_upcxx.cpp  lpav1_mpi.cpp  lpav1_upc.cpp  lpav1_upcxx.cpp  make_kgraph_upcxx.cpp  merge_intrmed_mpi.cpp  mpihelper.h  normalize_graph_weight.cpp  test_check_input_files.cpp  test_kmer.cpp  test_lz4string.cpp  test_utils.cpp  utils.cpp  utils.h
src/bcl/: bclhelper.h
src/sparc/: AbstractClient.cpp  AbstractClient.h  AbstractListener.cpp  AbstractListener.h  DBHelper.cpp  DBHelper.h  EdgeCountingClient.cpp  EdgeCountingClient.h  EdgeGeneratingClient.cpp  EdgeGeneratingClient.h  EdgeGeneratingListener.cpp  EdgeGeneratingListener.h  EdgeReadClient.cpp  EdgeReadClient.h  EdgeReadListener.cpp  EdgeReadListener.h  KmerCountingClient.cpp  KmerCountingClient.h  KmerCountingListener.cpp  KmerCountingListener.h  LPAClient.cpp  LPAClient.h  LPAListener.cpp  LPAListener.h  LPAState.cpp  LPAState.h  LZ4String.cpp  LZ4String.h  LevelDBHelper.cpp  LevelDBHelper.h  MPIClient.cpp  MPIClient.h  MPIListener.cpp  MPIListener.h  MemDBHelper.h  MergeClient.cpp  MergeClient.h  MergeListener.cpp  MergeListener.h  Message.cpp  (+15 more)
src/upc/: distr_lpa_graph.h  distrmap.h  upchelper.h
src/upcxx/: distr_lpa_graph.h  distrmap.h  upchelper.h
